--- a/CK.LogViewer.WebComponent/src/styles.css
+++ b/CK.LogViewer.WebComponent/src/styles.css
@@ -62,6 +62,22 @@ log-entry {
   display: flex;
 }
 
+group-summary {
+  display: flex;
+}
+
+.summary-badge {
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 3px;
+  padding: 2px;
+  margin-top: 2px;
+  margin-bottom: 2px;
+  margin-right: 5px;
+  height: 100%;
+  font-size: 9pt;
+}
+
 .modal {
   position: fixed;
   z-index: 1;
@@ -102,26 +118,32 @@ log-entry {
 
 .error {
   color: red;
+  border-color: red;
 }
 
 .info {
   color: #00a6e3;
+  border-color: #00a6e3;
 }
 
 .debug {
   color: #5c5c5c;
+  border-color: #5c5c5c;
 }
 
 .trace {
   color: #cccccc;
+  border-color: #cccccc;
 }
 
 .warn {
   color: rgb(221, 199, 2);
+  border-color: rgb(221, 199, 2);
 }
 
 .fatal {
   color: darkred;
+  border-color: darkred;
   background-color: yellow;
   font-weight: bold;
 }
