--- a/CK.LogViewer.WebComponent/src/styles.css
+++ b/CK.LogViewer.WebComponent/src/styles.css
@@ -52,8 +52,11 @@ log-exception {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-log-entry:hover {
+log-entry:hover, group-summary:hover {
   background-color: rgba(255, 255, 255, 0.1);
+}
+group-summary{
+  cursor: pointer;
 }
 
 log-entry {
