--- a/CK.LogViewer.WebComponent/src/styles.css
+++ b/CK.LogViewer.WebComponent/src/styles.css
@@ -60,9 +60,13 @@ group-summary{
 }
 
 log-entry {
-  height: 1.1em;
+  min-height: 1.1em;
   line-height: 1em;
   display: flex;
+}
+
+.log-text {
+  white-space: pre;
 }
 
 group-summary {
