--- a/CK.LogViewer.WebComponent/src/styles.css
+++ b/CK.LogViewer.WebComponent/src/styles.css
@@ -76,7 +76,7 @@ group-summary {
   display: flex;
 }
 
-.summary-badge {
+.badge {
   border-style: solid;
   border-width: 1px;
   border-radius: 3px;
