--- a/CK.LogViewer.WebComponent/src/styles.css
+++ b/CK.LogViewer.WebComponent/src/styles.css
@@ -7,7 +7,7 @@ body{
 log-viewer {
   display: flex;
   white-space: nowrap;
-  padding-left: 300px;
+  padding-left: 400px;
 }
 log-group {
   display: flex;
@@ -19,12 +19,10 @@ log-exception {
 }
 
 .left-content {
-  display: flex;
-  justify-content: space-between;
   position: absolute;
   left: 0;
   background-color: inherit;
-  width: 275px;
+  width: 380px;
 }
 
 .group-tab{
@@ -156,4 +154,37 @@ group-summary {
   border-color: darkred;
   background-color: yellow;
   font-weight: bold;
+}
+
+.tags-tooltip{
+  position: absolute;
+  left: 320px;
+}
+
+.tags-tooltip .tags-tooltip-content {
+  visibility: hidden;
+  height: 1em;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  position: absolute;
+  background-color: #1e1e1e;
+  z-index: 1;
+  margin-left: -100%;
+  word-wrap: break-word;
+  margin-top: -3px;
+  margin-right: 0;
+}
+
+.tags-tooltip:hover .tags-tooltip-content {
+  visibility: visible;
+}
+
+.tags-tooltip:hover {
+  visibility: hidden;
+}
+
+.monitorId{
+  position: absolute;
+  left: 270px;
 }
