--- a/CK.LogViewer.WebComponent/src/styles.css
+++ b/CK.LogViewer.WebComponent/src/styles.css
@@ -86,6 +86,14 @@ group-summary {
   font-size: 9pt;
 }
 
+.small-badge {
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 3px;
+  height: 100%;
+  font-size: 9pt;
+}
+
 .modal {
   position: fixed;
   z-index: 1;
@@ -161,27 +169,26 @@ group-summary {
   left: 320px;
 }
 
-.tags-tooltip .tags-tooltip-content {
+.tags-tooltip-content {
   visibility: hidden;
-  height: 1em;
+  height: 1.1em;
   color: #fff;
   text-align: center;
-  border-radius: 6px;
   position: absolute;
+  left: 339px;
   background-color: #1e1e1e;
-  z-index: 1;
-  margin-left: -100%;
   word-wrap: break-word;
-  margin-top: -3px;
-  margin-right: 0;
+  transform: translate(-50%, 0);
+  min-width: 38px;
+  padding: 0 8px 0 8px;
 }
 
-.tags-tooltip:hover .tags-tooltip-content {
+.tags-tooltip:hover ~ .tags-tooltip-content {
   visibility: visible;
 }
 
-.tags-tooltip:hover {
-  visibility: hidden;
+.tags-tooltip-content:hover {
+  visibility: visible;
 }
 
 .monitorId{
