--- a/CK.LogViewer.WebComponent/src/styles.css
+++ b/CK.LogViewer.WebComponent/src/styles.css
@@ -1,9 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&display=swap');
 
-:root {
-  --indentation-spacing: 20px;
-}
-
 body{
   font-family: 'Inconsolata', monospace;
   background-color: #1e1e1e;
@@ -18,7 +14,6 @@ body{
 
 log-viewer {
   display: flex;
-  white-space: nowrap;
   flex-direction: column;
 }
 log-group {
@@ -55,27 +50,6 @@ log-exception {
   display: none;
 }
 
-.ruler-unconnected{
-  margin-top: 5px;
-  margin-bottom: 5px;
-  border-top-right-radius: 50%;
-  border-bottom-right-radius: 50%;
-  border-top: solid;
-  border-bottom: solid;
-}
-
-.ruler-unconnected-top {
-  margin-top: 5px;
-  border-top-right-radius: 50%;
-  border-top: solid;
-}
-
-.ruler-unconnected-bottom {
-  margin-bottom: 5px;
-  border-bottom-right-radius: 50%;
-  border-bottom: solid;
-}
-
 .ruler-open {
   margin-top: 8px;
   border-top: solid;
@@ -102,10 +76,6 @@ log-exception {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-.log-content {
-  margin-left: calc(var(--spacing) * var(--indentation-spacing) + 5px);
-}
-
 .group-tab{
   cursor: pointer;
 }
@@ -117,7 +87,7 @@ log-entry {
   flex-direction: row;
 }
 
-.log-text {
+.metadata-date {
   white-space: pre;
 }
 
