--- a/CK.LogViewer.WebComponent/src/styles.css
+++ b/CK.LogViewer.WebComponent/src/styles.css
@@ -268,3 +268,37 @@ group-summary {
   height: 100%;
   color: white;
 }
+
+.upload-button svg {
+  position: relative;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  color: white;
+}
+
+.download-button {
+  height: 30px;
+  width: 30px;
+  cursor: pointer;
+}
+
+.download-button svg {
+  position: relative;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  color: white;
+}
+
+.st0{fill:#fff;fill-rule:evenodd;clip-rule:evenodd;}
+
+.buttons-toolbar {
+  display: flex;
+}
+
+.buttons-toolbar div {
+  margin: 2px;
+}
